fix: 修改 sidebar overflow 为 auto

--- a/src/views/containers/composer/composer.styl
+++ b/src/views/containers/composer/composer.styl
@@ -41,7 +41,7 @@
 
   &-wrapper
     padding: 24px 16px
-    overflow: scroll
+    overflow: auto
     height: 100%
 
   :global(.ant-layout-sider-zero-width-trigger)
